plugins/devkit/testData/inspections/presentation/InvalidIcon.java
import com.intellij.ide.presentation.Presentation;

@Presentation(icon = <error descr="Cannot resolve symbol 'InvalidIconPath'">"InvalidIconPath"</error>)
public class InvalidIcon {
}